syntax = "proto3";

option csharp_namespace = "GrpcSwaggerIssue";

import "google/api/annotations.proto";

service WidgetService {
	rpc GetWidget (WidgetRequest) returns (WidgetResponse) {
	  option (google.api.http) = {
        get: "/v1/{name=widgets/*}"
      };
	};
}

message WidgetRequest {
	string name = 1;
}

message WidgetResponse {
	string name = 1;
}

service ThingService {
	rpc GetThing (ThingRequest) returns (ThingResponse) {
	  option (google.api.http) = {
        get: "/v1/{name=things/*}"
      };
	};
}

message ThingRequest {
	string name = 1;
}

message ThingResponse {
	string name = 1;
}
